//    Copyright 2023 Yeong-won Seo
// 
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
// 
//        http://www.apache.org/licenses/LICENSE-2.0
// 
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

option csharp_namespace = "Frouros.Host";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package cri;

service CRI
{
  rpc QueryAll(google.protobuf.Empty) returns (PodCollection);
  rpc Query(PodRequest)               returns (PodResponse);
}

message PodRequest
{
  string uid = 1;
}

message PodResponse
{
  bool                      is_null    = 1;
  string                    uid        = 2;
  string                    name       = 3;
  string                    namespace  = 4;
  string                    state      = 5;
  google.protobuf.Timestamp created_at = 6;
  repeated bytes            network    = 7;
}

message PodCollection
{
  repeated string pods = 1;
}
